css/style.css
/* ... */
 
        .contactContainer input.btn:hover,
        .c_red .contactContainer input.btn:hover,
        .c_blue .contactContainer input.btn:hover,
        .c_green .contactContainer input.btn:hover,
        .c_pink .contactContainer input.btn:hover,
        .c_orange .contactContainer input.btn:hover,
        .c_gray .contactContainer input.btn:hover {
            background: #333333;
            cursor: pointer }
 
.message {
    font: normal 12px/18px arial;
    color: #777; 
    float:left;
    }
 
.contactContainer h3 {
    font: normal 20px/22px 'Oswald';
    text-transform: uppercase;
    color: #333;
    margin: 0 0 20px 0; 
    float:left;
    }
 
.contact_social {
    padding: 20px 0 0 0;
    margin: 32px 0 0 32px; 
    float:right;    
    }
  
 
    .contact_social span {
        font: normal 11px/32px arial;
        color:#333;
        float:left;    
    }
    .contact_social a,
    .contact_social span span {
        background: url(../images/icons_social.png) no-repeat;
        float: left;
        width: 32px;
        height: 32px;
        margin: 0 0 22px;
        background-color: #ff3300;
        -moz-border-radius: 16px;
        -webkit-border-radius: 16px;
        border-radius: 16px;
        display: inline-block;
    } 
    
    .contact_social .facebook {
        background-position: 0 0;
        margin-right: 10px; 
        display: inline-block;
        float:left;
        }
 
    .contact_social .twitter {
       background-position: -32px 0;
        margin-right: 10px; 
        display: inline-block;
        float:left;
        }
 
    .contact_social .linkedin {
       background-position: -64px 0;
       margin-right: 10px; 
         display: inline-block;
         float:left;
        }
 
    .contact_social .gmail { 
        background-position: -96px 0; 
        float:left;
    }
    
    .contact_social .address {
        background-position: -128px 0;
        margin-right: 10px;
        float:left;
    }
    
    .contact_social .phone {
        background-position: -192px 0;
        margin-right: 10px;
        float:left;
    }
    
    .contact_social .email {
        float:left;
        background-position: -160px 0;
        margin-right: 10px;
    }
    .contact_social .github {
        background: url(../images/GitHub-Mark-Light-32px.png) no-repeat;
        background-position: 0 0;
        margin-right: 10px; 
        background-color: #ff3300;
        -moz-border-radius: 16px;
        -webkit-border-radius: 16px;
        border-radius: 16px;
        display: inline-block;
        float:left;
    }
        
    .contact_social a:hover,
    .c_red .contact_social a:hover,
    .c_blue .contact_social a:hover,
    .c_green .contact_social a:hover,
    .c_pink .contact_social a:hover,
    .c_orange .contact_social a:hover,
    .c_gray .contact_social a:hover {
        background-color: #333333;
    }
    
div.site-message-absolute {
    left: 0px ;
    position: absolute ;
    top: 222px ;
    z-index: 1000;
    float: left;
    opacity: 0; }
 
div.site-message-fixed {
    position: fixed ;
    top: 0;
    z-index: 1000;
    float: left;
    opacity: 0; }
 
#btn_top {
    background: #ff3300 url(../images/icon_top.png) no-repeat 0 0;
    width: 96px;
    height: 39px;
    float: left;
    position: absolute;
    right: 0;
    bottom: 0;
    cursor: pointer; }
 
    #btn_top:hover,
    .c_red #btn_top:hover,
    .c_blue #btn_top:hover,
    .c_green #btn_top:hover,
    .c_pink #btn_top:hover,
    .c_orange #btn_top:hover,
    .c_gray #btn_top:hover
    { height: 44px; background-color: #333; }
    
/*                                            QUERY LOADER
__________________________________________________________
*/

.QOverlay {
    background-color: #323232;
    z-index: 9999;
    top:0;
    left:0;
}

.QLoader {
    background-color: #fff;
    border-right: 15px solid #ff3300;
    height: 2px;
}
   /*
       /*
       Timeline
       ----------------------------------------------------- 
       */ 
div {
    font-family: Helvetica, Arial, sans-serif;
    box-sizing: border-box;
}
.timeline {
    float:right;
    width: 400px;
    background-color:white;
}
.timeline .timeline-item {
    width: 100%;
}
.timeline .timeline-item .info, .timeline .timeline-item .year {
    color: #eee;
    display: block;
    float:left;
    -webkit-transition: all 1s ease;
    -moz-transition: all 1s ease;
    transition: all 1s ease;
}
.timeline .timeline-item.close .info, .timeline .timeline-item.close .year {
    color: #ccc;
    -webkit-transition: all 1s ease;
    -moz-transition: all 1s ease;
    transition: all 1s ease;
}
.timeline .timeline-item .year {
    font-size: 24px;
    font-weight: bold;
    width: 22%;
}
.timeline .timeline-item .info {
    color: #444;    
    width: 100%;
    width: 78%;
    margin-left: -2px;
    padding: 0 0 40px 35px;
    border-left: 4px solid #aaa;
    font-size: 14px;
    line-height: 20px;
}
.timeline .timeline-item .marker {
    background-color:#fff;
    border: 4px solid #aaa;
    height: 20px;
    width: 20px;
    border-radius: 100px;
    display: block;
    float: right;
    margin-right: -14px;
    z-index: 2000;
    position: relative;
}
.timeline .timeline-item.active .info, .timeline .timeline-item:hover .info {
    color: #9DB668; /*Hover color to change*/
    -webkit-transition: all 1s ease;
    -moz-transition: all 1s ease;
    transition: all 1s ease;
}
.timeline .timeline-item.active .year, .timeline .timeline-item:hover .year {
    color: #9DB668; /*Hover color to change*/
}
.timeline .timeline-item .marker .dot {
    background-color: white;
    -webkit-transition: all 1s ease;
    -moz-transition: all 1s ease;
    transition: all 1s ease;
    display: block;
    border: 4px solid white;
    height: 12px;
    width: 12px;
    border-radius: 100px;
    float: right;
    z-index: 2000;
    position: relative;
}
/* ... */

